--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/react-query": "^5.51.23",
     "dayjs": "^1.11.12",
     "expo": "^51.0.28",
     "expo-crypto": "~13.0.2",
