--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.51.23",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.12",
-    "expo": "^51.0.28",
+    "expo": "^51.0.31",
     "expo-crypto": "~13.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
