--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
+    "supabase": "^1.191.3",
     "typescript": "~5.3.3"
   },
   "private": true
