--- a/app.json
+++ b/app.json
@@ -28,7 +28,13 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-font",
+      {
+        "fonts" : ["@/assets/fonts/Poppins-Bold.ttf"]
+      }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
