--- a/package.json
+++ b/package.json
@@ -13,23 +13,28 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "0.37.2",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.51.23",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.12",
-    "expo": "^51.0.31",
+    "expo": "^51.0.34",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
+    "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "^0.28.17",
     "expo-router": "~3.5.20",
     "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -43,11 +48,7 @@
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
-    "@stripe/stripe-react-native": "0.37.2",
-    "expo-notifications": "~0.28.16",
-    "expo-device": "~6.0.2",
-    "expo-constants": "~16.0.2"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
