--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.51.23",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.12",
+    "deepmerge": "^4.3.1",
     "expo": "^51.0.34",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
@@ -43,6 +44,7 @@
     "react-native": "^0.74.5",
     "react-native-elements": "^3.4.3",
     "react-native-pager-view": "6.3.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
